--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: ASIBUKA
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Just another blog of ASIBUKA
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
@@ -18,8 +18,8 @@ avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/je
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
-  facebook:
+  email: akhmadsyahroni.email@gmail.com
+  facebook: https://www.facebook.com/asibukaofficial
   flickr:
   github: barryclark/jekyll-now
   instagram:
